--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ h1 {
     display: inline-block;
     text-align: center;
     margin-top: 0px;
+     scrollbar-width: none;
+    -ms-overflow-style: none; 
 }
 
 .product-card {
